force-app/main/default/objects/Showtime__c/fields/Is_3D__c.field-meta.xml
<CustomField>
    <fullName>Is_3D__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is 3D</label>
    <type>Checkbox</type>
</CustomField>