force-app/main/default/objects/Showtime__c/fields/Is_IMAX__c.field-meta.xml
<CustomField>
    <fullName>Is_IMAX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is IMAX</label>
    <type>Checkbox</type>
</CustomField>