force-app/main/default/objects/Showtime__c/fields/Reserved_Seats__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Seats__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reserved Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>