force-app/main/default/objects/Showtime__c/fields/Screen_Number__c.field-meta.xml
<CustomField>
    <fullName>Screen_Number__c</fullName>
    <label>Screen Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>