force-app/main/default/objects/Showtime__c/fields/Session_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Session_DateTime__c</fullName>
    <formula>DATETIMEVALUE(
    TEXT(YEAR(Session_Date__c)) &amp; &quot;-&quot; &amp; 
    TEXT(MONTH(Session_Date__c)) &amp; &quot;-&quot; &amp; 
    TEXT(DAY(Session_Date__c)) &amp; &quot; &quot; &amp; 
    TEXT(Session_Time__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session DateTime</label>
    <type>DateTime</type>
</CustomField>