force-app/main/default/objects/Showtime__c/fields/Session_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Time__c</fullName>
    <label>Session Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>