force-app/main/default/objects/Showtime__c/fields/Showtime_API_ID__c.field-meta.xml
<CustomField>
    <fullName>Showtime_API_ID__c</fullName>
    <externalId>true</externalId>
    <label>Showtime API ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>