force-app/main/default/objects/Showtime__c/fields/Subtitles__c.field-meta.xml
<CustomField>
    <fullName>Subtitles__c</fullName>
    <label>Subtitles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>