force-app/main/default/objects/Showtime__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Theater</label>
    <referenceTo>Theater__c</referenceTo>
    <relationshipLabel>Showtimes</relationshipLabel>
    <relationshipName>Showtimes</relationshipName>
    <type>Lookup</type>
</CustomField>