force-app/main/default/objects/Showtime__c/validationRules/Reserved_Seats_Cannot_Exceed_Total.validationRule-meta.xml
<ValidationRule>
    <fullName>Reserved_Seats_Cannot_Exceed_Total</fullName>
    <active>true</active>
    <description>Reserved seats cannot exceed total seats</description>
    <errorConditionFormula>Reserved_Seats__c &gt; Total_Seats__c</errorConditionFormula>
    <errorDisplayField>Reserved_Seats__c</errorDisplayField>
    <errorMessage>Reserved seats cannot exceed total seats available.</errorMessage>
</ValidationRule>